[project]
name = "dlna-tester"
version = "1.0.0"
description = "A comprehensive DLNA/UPnP media server compliance testing tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "lxml>=5.0.0",
]

[project.scripts]
dlna-tester = "dlna_tester.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dlna_tester"]
